Set GpuPreferences correctly in GpuDataManagerImplPrivate::AppendGpuCommandLine.

GpuDataManagerImplPrivate::AppendGpuCommandLine() may add some GPU
command line switches which have been replaced by GpuPreferences. So we
need set those preferences in GpuDataManagerImplPrivate::AppendGpuCommandLine()
to allow GPU process get the correct GpuPreferences via IPC message.

BUG=601647

Review URL: https://codereview.chromium.org/1881463002

Cr-Commit-Position: refs/heads/master@{#386669}

Former-commit-id: 4c901e8f2249a4efacb311d0e24d09f3c88c8e0c