content/browser/gpu/gpu_data_manager_impl_private.h
@@ -29,6 +29,7 @@ class CommandLine;
 }
 
 namespace gpu {
+struct GpuPreferences;
 struct VideoMemoryUsageStats;
 }
 
@@ -74,7 +75,8 @@ class CONTENT_EXPORT GpuDataManagerImplPrivate {
 
   void AppendRendererCommandLine(base::CommandLine* command_line) const;
 
-  void AppendGpuCommandLine(base::CommandLine* command_line) const;
+  void AppendGpuCommandLine(base::CommandLine* command_line,
+                            gpu::GpuPreferences* gpu_preferences) const;
 
   void UpdateRendererWebPrefs(WebPreferences* prefs) const;
 
